Revision history for Perl extension Bread::Board

0.10
    - fixing the SYNOPSIS so that it will actually
      run (thanks to zby for spotting this)

0.09 Wed. July 29, 2009
    Add cloning support for containers and services
    (thanks to jrockway for this)
      - adding tests for this

    * Bread::Board::ConstructorInjection
      - use meta->constructor_name instead of "new"
        if possible (jrockway)

    * Bread::Board::Service::WithParameters
      - fixing a leak where we would hold onto
        parameters that were passed into get()

0.08 Sat. July 18, 2009
    - updating dates on all files

    * Bread::Board::LifeCycle::Singleton::WithParameters
      - new module added to support the idea of a singleton
        lifecycle keyed on the parameters rather then just
        a per-instance item.

    * Bread::Board::Traversable
      - fixed the is_weak_ref mis-spelling

0.07 Wed. Feb. 18, 2009
    - Work with new MooseX::Params::Validate
    - Specify MX::P::Validate version number in Makefile.PL

0.06 Mon. Nov. 3, 2008
    - Forgot to update MANIFEST before uploading to CPAN.

0.05 Mon. Nov. 3, 2008
    - Applied immutablity to classes where applicable, and vigorously unimport
      Moose keywords when they are no longer needed. This results in
      x 2 performance as far as defining a Bread::Board model (Daisuke Maki).

    * Bread::Board
      - Implemented unimport(), thus allowing you to remove keywords
        exported by Bread::Board (Daisuke Maki).

    * Bread::Board::Traversable
      - Unrolled recursive calls to loops, and removed Sub::Current dependency
        (Daisuke Maki)

0.04 Fri. Oct. 31, 2008
    * Bread::Board
      Bread::Board::Traversable
      - fix root path handling (thanks to Daisuke Maki)
        - added tests for this

    * Bread::Board::Dumper
      - Simple utility for dumping containers
        (thanks to Daisuke Maki)

    * t/
      - fixing the plans so that new versions of
        Test::More stop complaining
